# fantasy_name_generator

./: .gitignore  README.md  pyproject.toml
Models/: model.h5  model2.h5  model3.h5
src/generator/: name_generator.py
src/ml/: data_class.py  encoding.py  neural_network.py  settings.py
src/plot/: plotter.py
