[tool.poetry]
name = "fantasy-name-generator"
version = "0.1.0"
description = "generate fantasy names, using AI"
authors = ["Dmitry Buggenhout <dmitry.buggenhout@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "generator", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"

[tool.poetry.scripts]
generate = "generator.name_generator:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
