[tool.poetry]
name = "fantasy-name-generator"
version = "0.1.0"
description = "generate fantasy names, using AI"
authors = ["Dmitry Buggenhout <dmitry.buggenhout@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"},{include = "generator", from = "src"}, {include = "ml", from = "src"}]


[tool.poetry.dependencies]
python = "^3.10,<3.11"
numpy = "^1.23.4"
pandas = "^1.5.1"
keras = "^2.10.0"
tensorflow = "^2.10.0"
matplotlib = "^3.6.1"

[tool.poetry.scripts]
generate = "generator.name_generator:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
